--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-root-toast": "^3.2.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.6.0",
+    "react-native-star-rating": "^1.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^10.2.3",
     "react-native-wechat": "^1.9.12",
